# Computer-Graphics

./: README.md  大作业等.pptx
大作业/nrenderer/: .gitignore  Readme.md
大作业/nrenderer/code/: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp
大作业/nrenderer/code/app/: CMakeLists.txt
大作业/nrenderer/code/components/: CMakeLists.txt
大作业/nrenderer/code/components/path_photon_mapping/: CMakeLists.txt
大作业/nrenderer/code/components/path_photon_mapping/include/: Camera.hpp  KdTree.hpp  Onb.hpp  PathPhotonMapping.hpp  Ray.hpp  VertexTransformer.hpp
大作业/nrenderer/code/components/path_photon_mapping/include/intersections/: HitRecord.hpp  intersections.hpp
大作业/nrenderer/code/components/path_photon_mapping/include/samplers/: Hemisphere.hpp  Marsaglia.hpp  Sampler.hpp  Sampler1d.hpp  Sampler2d.hpp  Sampler3d.hpp  SamplerInstance.hpp  UniformInCircle.hpp  UniformInSquare.hpp  UniformSampler.hpp
大作业/nrenderer/code/components/path_photon_mapping/include/shaders/: Glass.hpp  Lambertian.hpp  Scattered.hpp  Shader.hpp  ShaderCreator.hpp
大作业/nrenderer/code/components/path_photon_mapping/src/: Adapter.cpp  PathPhotonMapping.cpp  VertexTransformer.cpp
大作业/nrenderer/code/components/path_photon_mapping/src/intersections/: intersections.cpp
大作业/nrenderer/code/components/path_photon_mapping/src/shaders/: Glass.cpp  Lambertian.cpp
大作业/nrenderer/code/test/: test.cpp  (+2 more)
大作业/nrenderer/doc/: intro.md
大作业/nrenderer/resource/: conductors.scn  env_map_spheres.scn  imgui.ini  path_tracing_cornel.scn  pt_glass.scn  ray_cast_cornel.scn
计图/: .gitignore  CGAN.py  README.md  计图小作业实验报告.md
(+186 files in other folders)
